--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.3",
+    "gh-pages": "^6.2.0",
     "github": "^14.0.0",
     "icons": "^1.0.0",
     "react": "^18.2.0",
